update cmakelist file to grab all example files

--- a/docker/development_docker_compose.yml
+++ b/docker/development_docker_compose.yml
@@ -11,6 +11,6 @@ services:
     network_mode: host
     privileged: false
     volumes:
-      - ../:/Design_pattern_example
+      - ../:/cpp_example
     command: bash -c "/bin/bash"
 
